--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ htmlcov
 
 # JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 /**/.idea
+
+# Boshu
+/Shaohui_Steel/
